--- a/frontend/templates/registration.html
+++ b/frontend/templates/registration.html
@@ -35,52 +35,40 @@
     </nav>
     <div class="container">
       <div id="sidenav">
-        <div id="patientinfo-btn" class="sidenav-btn">
+        <div id="general-info-btl">
           <img src="../assets/images/checkmark1.svg" />
           <div class="btl-container">
             <h5>General Information</h5>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+              doloribus
+            </p>
           </div>
         </div>
-        <div id="chatbox-btn" class="sidenav-btn">
+        <div id="chat-bt2">
           <img src="../assets/images/checkmark1.svg" />
           <div class="btl-container">
             <h5>Chat Consultancy</h5>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+              doloribus
+            </p>
           </div>
         </div>
-        <div id="report-btn" class="sidenav-btn">
+        <div id="Report-bt3">
           <img src="../assets/images/checkmark1.svg" />
           <div class="btl-container">
             <h5>Report</h5>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+              doloribus
+            </p>
           </div>
         </div>
       </div>
-      <div id="content">
-        <section id="patientinfo">
-          <h1>Abha ID Login</h1>
-        </section>
-        <section id="chatbox">
-          <h1>AI Chatbox</h1>
-          <div class="chat-container">
-            <div class="chat-box">
-              <div class="chat-message ai-message">
-                <div class="avatar">AI</div>
-                <p class="message-content">Hi, How are you feeling today?</p>
-              </div>
-              <!-- Add more messages as needed -->
-            </div>
-            <form class="message-form">
-              <input type="text" placeholder="Type your message here..." />
-              <button type="submit">Send</button>
-            </form>
-          </div>
-        </section>
-        <section id="report"><h1>Report</h1></section>
-      </div>
+      <section id="patient-info"></section>
+      <section id="chat-box"></section>
+      <section id="report"></section>
     </div>
-
-    <script src="../assets/js/patient.js"></script>
   </body>
 </html>
